--- a/_posts/2000-01-07-contact.md
+++ b/_posts/2000-01-07-contact.md
@@ -10,6 +10,6 @@ Questions about the DH Beyond Modern English conference can be directed to [pram
 
 Follow on Twitter at [@qCritLab](https://twitter.com/qcritlab) & [#dhbme](https://twitter.com/search?q=%23dhbme&src=typd).  
 
-Flier for the DHBME conference can be downloaded as a PDF [here](img/dhbme_flier.pdf)
+Flier for the DHBME conference can be downloaded as a PDF [here](img/dhbme.pdf). 
 
 <a href="#schedule">Return to DHBME schedule</a>
