--- a/_posts/2000-01-04-schedule.md
+++ b/_posts/2000-01-04-schedule.md
@@ -12,39 +12,40 @@ color: white
 
 10:00am - 12:00pm
 1.	Damián Blasi (Harvard University), “Rethinking Linguistic Diversity and its Role in the Study of Behavior and Cognition”
-2.	Tanya Clement (UT Austin), TBA
-3.	Rebecca Frost Davis (St Edward’s University), “A Pedagogy for DH Beyond Modern English”
+2.	Tanya Clement (University of Texas at Austin), TBA
+3.	Rebecca Frost Davis (St. Edward’s University), “A Pedagogy for DH Beyond Modern English”
 
 1:00pm - 3:00pm
-1.	Valéry Berlincourt (University of Geneva), Jean-Philippe Goldman (University of Geneva), and Damien Nelis (University of Geneva), “Towards a Digital Edition of the <i>Achilleid</i> of Statius.” (online)
-2.	Neil Coffee (SUNY Buffalo) and Jeff Kinnison (University of Notre Dame), “<i>Tesserulae Recompostae</i>: The Evolution of the Tesserae Project for the Digital Study of Intertextuality”
-3.	Carrie Schroeder (University of Oklahoma), “Entity Recognition and Linked Open Data for Late Antique Egyptian Literature”
+1.	Valéry Berlincourt (University of Geneva), Jean-Philippe Goldman (University of Geneva), and Damien Nelis (University of Geneva), “Towards a Digital Edition of the <i>Achilleid</i> of Statius” (online)
+2.	Neil Coffee (State University of New York at Buffalo) and Jeff Kinnison (University of Notre Dame), “<i>Tesserulae Recompostae</i>: The Evolution of the Tesserae Project for the Digital Study of Intertextuality”
+3.	Caroline Schroeder (University of Oklahoma), “Entity Recognition and Linked Open Data for Late Antique Egyptian Literature”
 
 3:30pm - 5:00pm  
-1.  Dale Correa (UT Austin), “Making Arabic OCR Sustainable in the University Library Environment”
-2.  Mark Ravina (UT Austin), TBA  
+1.  Dale Correa (University of Texas at Austin), “Making Arabic OCR Sustainable in the University Library Environment”
+2.  Mark Ravina (University of Texas At Austin), TBA  
 
 ### Thursday April 7 RLP 1.302E (Glickman Center)
 
 9:30am - 12:00pm
-1.	Barbara McGillivray (King’s College London) and Martina Astrid Rodda (University of Oxford), “Computational Valency Lexica and Homeric Formularity (online)”
-2.	David Bamman (UC Berkeley), “Latin BERT: A Contextual Language Model for Classical Philology”
+1.	Barbara McGillivray (King’s College London) and Martina Astrid Rodda (University of Oxford), “Computational Valency Lexica and Homeric Formularity” (online)
+2.	David Bamman (University of California, Berkeley), “Latin BERT: A Contextual Language Model for Classical Philology”
 3.	Patrick Burns (Harvard University), “Error, Scale, and the Computational Redefinition of Philology”
 4.	Peter Heslin (Durham University), “Literary Entropy: Quantifying Dis/order in Ancient Text Collections”
 
 1:00pm - 3:30pm
 1.	Michael Drout (Wheaton College), “Combining ‘Lexomic’ Digital Methods and Traditional Approaches in the Analysis of <i>Beowulf</i>”
-2.	Georgia Henley (St Anselm College), “Digital Research in Medieval Celtic Studies: Successes, New Directions, and Opportunities” (online)
+2.	Georgia Henley (Saint Anselm College), “Digital Research in Medieval Celtic Studies: Successes, New Directions, and Opportunities” (online)
 3.	David Mimno (Cornell University), “Early Modern English as a Low-resource High-resource Language”
 4.	James Dobson (Dartmouth College), “Procrustes and Progress: Linear Alignment and Historical Analysis”
 
-4:00pm - 5:00pm  Tool Demonstration  
+4:00pm - 5:00pm  
+Tool Demonstration  
 
 ### Friday April 8 RLP 1.302B (Glickman Center)
 
 9:30am - 11:30am
 1.	Sukanta Chaudhuri (Jadavpur University), “<i>Shabdakalpa</i>: Making a Historical Dictionary of the Bengali Language” (online)
-2.	Rajni Mujral (SRM University), “Dialogical Writing and Performance text: Analysing Qissa in Panjab”
+2.	Rajni Mujral (SRM University), “Dialogical Writing and Performance Text: Analysing Qissa in Panjab”
 3.	Amba Kulkarni (University of Hyderabad), Pavankumar Satuluri (Chinmaya Vishwavidyapeeth), and S. R. Arjuna (Manipal Academy of Higher Education), “Developing E-readers for Sanskrit Texts Semi-automatically”
 
 12:30pm - 2:30pm  
@@ -52,5 +53,6 @@ color: white
 2.  Jennifer Isasi (Pennsylvania State University), “Literary Analysis of Spanish-language Novels with NLP and Character-level Metadata”  
 3.  Grace Fong (McGill University) and Song Shi (University of Pittsburgh), “The Potential of Text and Paratext Data for Exploring Social Networks in Ming Qing Women’s Writings”  
 
-2:30pm  Conference ends
+2:30pm  
+Conference ends
 {: .schedule}
