Updating people page (minor changes)

--- a/_posts/2000-01-06-people.md
+++ b/_posts/2000-01-06-people.md
@@ -7,24 +7,24 @@ color: white
 ## DH Beyond Modern English Participants
 
 [**S. R. Arjuna**](https://manipal.edu/philosophy/department-faculty/faculty-list/Arjuna-S-R/_jcr_content.html) Manipal Academy of Higher Education  
-[**David Bamman**](http://people.ischool.berkeley.edu/~dbamman/) University of California at Berkeley  
+[**David Bamman**](http://people.ischool.berkeley.edu/~dbamman/) University of California, Berkeley  
 [**Valéry Berlincourt**](https://www.unige.ch/lettres/antic/unites/latin/enseignants/valery-berlincourt) University of Geneva  
 [**Damián Blasi**](https://datascience.harvard.edu/people/damián-blasi) Harvard University  
 [**Patrick Burns**](https://diyclassics.github.io) Harvard University  
 [**Sukanta Chaudhuri**](https://en.wikipedia.org/wiki/Sukanta_Chaudhuri) Jadavpur University  
 [**Tanya Clement**](https://liberalarts.utexas.edu/english/faculty/tc24933) University of Texas at Austin  
-[**Neil Coffee**](http://arts-sciences.buffalo.edu/classics/faculty/core-faculty/coffee-neil.html) SUNY Buffalo  
+[**Neil Coffee**](http://arts-sciences.buffalo.edu/classics/faculty/core-faculty/coffee-neil.html) State University of New York at Buffalo  
 [**Dale Correa**](https://www.almaturidiyya.com) University of Texas at Austin   
-[**Rebecca Frost Davis**](https://www.stedwards.edu/directory/employees/davis-rebecca-f) St Edward's University  
+[**Rebecca Frost Davis**](https://www.stedwards.edu/directory/employees/davis-rebecca-f) St. Edward's University  
 [**James Dobson**](https://home.dartmouth.edu/faculty-directory/james-e-dobson) Dartmouth College  
 [**Michael Drout**](https://wheatoncollege.edu/academics/faculty-directory/michael-drout/) Wheaton College  
 [**Grace Fong**](https://www.mcgill.ca/eas/grace-s-fong) McGill University  
 [**Jean-Philippe Goldman**](https://www.unige.ch/lettres/linguistique/goldman/) University of Geneva  
 [**Georgia Henley**](https://georgiahenley.com/) Saint Anselm College  
 [**Peter Heslin**](https://www.durham.ac.uk/staff/p-j-heslin/) Durham University  
-[**Jennifer Isasi**](http://jenniferisasi.com/) The Pennsylvania State University  
+[**Jennifer Isasi**](http://jenniferisasi.com/) Pennsylvania State University  
 [**Andrew Janco**](https://www.haverford.edu/users/ajanco) Haverford College  
-[**Jeff Kinnison**](https://www.linkedin.com/in/jeffery-kinnison-a25776a6/) University of Notre Dame  
+[**Jeffery Kinnison**](https://www.linkedin.com/in/jeffery-kinnison-a25776a6/) University of Notre Dame  
 [**Amba Kulkarni**](https://sanskrit.uohyd.ac.in/faculty/amba/) University of Hyderabad  
 [**Barbara McGillivray**](https://kclpure.kcl.ac.uk/portal/barbara.mcgillivray.html) King's College London  
 [**David Mimno**](https://mimno.infosci.cornell.edu) Cornell University  
@@ -33,7 +33,7 @@ color: white
 [**Mark Ravina**](https://liberalarts.utexas.edu/history/faculty/mr56267) University of Texas at Austin   
 [**Martina Astrid Rodda**](https://www.classics.ox.ac.uk/people/martina-astrid-rodda) University of Oxford  
 [**Pavankumar Satuluri**](https://www.cvv.ac.in/faculties/dr-pavankumar-satuluri) Chinmaya Vishwavidyapeeth  
-[**Carrie Schroeder**](http://www.carrieschroeder.com/) The University of Oklahoma  
+[**Caroline Schroeder**](http://www.carrieschroeder.com/) University of Oklahoma  
 [**Song Shi**](https://www.cgm.pitt.edu/people/ant-18) University of Pittsburgh
 
 **Organizers**  
